--- a/Starbucks Project.ipynb
+++ b/Starbucks Project.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4   8       Yes         0   3  28.044332 -0.385883   1   1   2   2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "(84534, 10)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "Yes        41643  721"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,6 +281,183 @@
     "table = table.reset_index()\n",
     "table.rename({0: 'count'}, axis=1, inplace=True)\n",
     "table.pivot_table(index=['Promotion'], columns=['purchase'], values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>V1</th>\n",
+       "      <th>V2</th>\n",
+       "      <th>V3</th>\n",
+       "      <th>V4</th>\n",
+       "      <th>V5</th>\n",
+       "      <th>V6</th>\n",
+       "      <th>V7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30.443518</td>\n",
+       "      <td>-1.165083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>32.159350</td>\n",
+       "      <td>-0.645617</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30.431659</td>\n",
+       "      <td>0.133583</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.588914</td>\n",
+       "      <td>-0.212728</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>28.044332</td>\n",
+       "      <td>-0.385883</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>84529</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30.084876</td>\n",
+       "      <td>1.345672</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>84530</td>\n",
+       "      <td>3</td>\n",
+       "      <td>33.501485</td>\n",
+       "      <td>-0.299306</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>84531</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31.492019</td>\n",
+       "      <td>1.085939</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>84532</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37.766106</td>\n",
+       "      <td>0.999361</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>84533</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.720835</td>\n",
+       "      <td>1.085939</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>84534 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       V1         V2        V3  V4  V5  V6  V7\n",
+       "0       2  30.443518 -1.165083   1   1   3   2\n",
+       "1       3  32.159350 -0.645617   2   3   2   2\n",
+       "2       2  30.431659  0.133583   1   1   4   2\n",
+       "3       0  26.588914 -0.212728   2   1   4   2\n",
+       "4       3  28.044332 -0.385883   1   1   2   2\n",
+       "...    ..        ...       ...  ..  ..  ..  ..\n",
+       "84529   1  30.084876  1.345672   1   1   3   1\n",
+       "84530   3  33.501485 -0.299306   1   1   4   1\n",
+       "84531   1  31.492019  1.085939   2   3   2   2\n",
+       "84532   1  37.766106  0.999361   2   2   1   2\n",
+       "84533   1  21.720835  1.085939   2   2   1   2\n",
+       "\n",
+       "[84534 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.iloc[:, 3:]"
    ]
   },
   {
