--- a/Starbucks Project.ipynb
+++ b/Starbucks Project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Portfolio Exercise: Starbucks**\n",
+    "# **Starbucks Offer Model**\n",
     "\n",
     "**Background Information**\n",
     "\n",
