dev: create file structure and new model to test out

--- a/Starbucks Project.ipynb
+++ b/Starbucks Project.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
      "output_type": "stream",
      "text": [
       "Fitting model: Logistic Regression...\n",
-      "Fitting 5 folds for each of 428 candidates, totalling 2140 fits\n"
+      "Fitting 5 folds for each of 212 candidates, totalling 1060 fits\n"
      ]
     }
    ],
@@ -732,7 +732,6 @@
     "    {'classifier': [RandomForestClassifier()],\n",
     "     'classifier__n_estimators': [50, 80, 130, 230],\n",
     "     'classifier__max_depth': [3, 8, 15],\n",
-    "     'classifier__max_iter': [300, 500, 700, 1000],\n",
     "     'classifier__max_features': ['auto', 'sqrt', 'log2'],\n",
     "     'classifier__class_weight': [{0:1, 1:83}, {0:1, 1:830}]\n",
     "    },\n",
@@ -752,35 +751,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'classifier': RandomForestClassifier(class_weight={0: 1, 1: 830}, max_depth=15,\n",
+       "                        n_estimators=50),\n",
+       " 'classifier__class_weight': {0: 1, 1: 830},\n",
+       " 'classifier__max_depth': 15,\n",
+       " 'classifier__max_features': 'auto',\n",
+       " 'classifier__n_estimators': 50}"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cv.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "precision score: 0.015499070055796652\n",
+      "recall score: 0.2403846153846154\n",
+      "f1 score: 0.029120559114735\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = best_clf.predict(X_test)\n",
+    "\n",
+    "print('precision score: {}'.format(precision_score(y_test, y_pred)))\n",
+    "print('recall score: {}'.format(recall_score(y_test, y_pred)))\n",
+    "print('f1 score: {}'.format(f1_score(y_test, y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6923076923076923"
+       "['./models/sb_recommender_rf001.sav']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred = best_clf.predicit(X_test)\n",
-    "\n",
-    "print('precision score: {}'.format(precision_score(y_test, y_pred))\n",
-    "print('recall score: {}'.format(recall_score(y_test, y_pred))\n",
-    "print('f1 score: {}'.format(f1_score(y_test, y_pred))"
+    "import joblib\n",
+    "joblib.dump(best_clf, './models/sb_recommender_rf001.sav')"
    ]
   },
   {
